--- a/package.json
+++ b/package.json
@@ -15,9 +15,21 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:users": "node services/users-service/server.js",
+    "start:costs": "node services/costs-service/server.js",
+    "start:logs": "node services/logs-service/server.js",
+    "start:admin": "node services/admin-service/server.js",
+
+    "start:all": "run-p start:users start:costs start:logs start:admin"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.1.1",
+    "pino": "^10.1.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
